refactor(evaluator): split visitPrintStatement method